--- a/fly.toml
+++ b/fly.toml
@@ -3,4 +3,8 @@ kill_signal = "SIGINT"
 kill_timeout = 5
 processes = [ ]
 
-[experimenta
+[experimental]
+allowed_public_ports = [ ]
+auto_rollback = true
+cmd = "start.sh"
+entry
