--- a/fly.toml
+++ b/fly.toml
@@ -27,4 +27,10 @@ script_checks = [ ]
   [[services.ports]]
   handlers = [ "http" ]
   port = 80
-  force_https = tru
+  force_https = true
+
+  [[services.ports]]
+  handlers = [ "tls", "http" ]
+  port = 443
+
+  [[s
