--- a/fly.toml
+++ b/fly.toml
@@ -33,4 +33,7 @@ script_checks = [ ]
   handlers = [ "tls", "http" ]
   port = 443
 
-  [[s
+  [[services.tcp_checks]]
+  grace_period = "1s"
+  interval = "15s"
+  restart_limit =
