Deploy tiagoporto/gerador-validador-cpf to github.com/tiagoporto/gerador-validador-cpf.git:gh-pages

--- a/fly.toml
+++ b/fly.toml
@@ -36,4 +36,8 @@ script_checks = [ ]
   [[services.tcp_checks]]
   grace_period = "1s"
   interval = "15s"
-  restart_limit =
+  restart_limit = 0
+  timeout = "2s"
+
+  [[services.http_checks]]
+  interval = "
