work on documentation

--- a/fly.toml
+++ b/fly.toml
@@ -40,4 +40,7 @@ script_checks = [ ]
   timeout = "2s"
 
   [[services.http_checks]]
-  interval = "
+  interval = "10s"
+  grace_period = "5s"
+  method = "get"
+  path 
