--- a/fly.toml
+++ b/fly.toml
@@ -43,4 +43,6 @@ script_checks = [ ]
   interval = "10s"
   grace_period = "5s"
   method = "get"
-  path 
+  path = "/healthcheck"
+  protocol = "http"
+  timeout = "2s"
