--- a/package.json
+++ b/package.json
@@ -3,4 +3,5 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-s b
+    "build": "run-s build:*",
+    "build:css": "pnpm run generate:css -- --minify",
