--- a/package.json
+++ b/package.json
@@ -5,3 +5,5 @@
   "scripts": {
     "build": "run-s build:*",
     "build:css": "pnpm run generate:css -- --minify",
+    "build:remix": "remix build",
+    "dev":
