--- a/package.json
+++ b/package.json
@@ -6,4 +6,5 @@
     "build": "run-s build:*",
     "build:css": "pnpm run generate:css -- --minify",
     "build:remix": "remix build",
-    "dev":
+    "dev": "run-p dev:*",
+    "dev:css": "pnpm run generate:cs
