Lines authored by aziz

--- a/package.json
+++ b/package.json
@@ -9,4 +9,5 @@
     "dev": "run-p dev:*",
     "dev:css": "pnpm run generate:css -- --watch",
     "dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
-    "format": "
+    "format": "prettier --write .",
+    "generate:css": "tailwindcss -o ./
