--- a/package.json
+++ b/package.json
@@ -13,4 +13,5 @@
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
-    "start": "rem
+    "start": "remix-serve build",
+    "start:mocks": "binode --require .
