--- a/package.json
+++ b/package.json
@@ -14,4 +14,6 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
     "start": "remix-serve build",
-    "start:mocks": "binode --require .
+    "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
+    "test": "vitest",
+    "t
