--- a/package.json
+++ b/package.json
@@ -16,4 +16,4 @@
     "start": "remix-serve build",
     "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
     "test": "vitest",
-    "t
+    "test:e2e:dev": "start-server-and-test dev http://lo
