Removed dead code

--- a/package.json
+++ b/package.json
@@ -17,4 +17,5 @@
     "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
     "test": "vitest",
     "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"npx cypress open\"",
-    "pretest:e2e:run": "pnpm run
+    "pretest:e2e:run": "pnpm run build",
+    "test:e2e:run": "cross-env PORT=8811 start-server-and-test st
