--- a/package.json
+++ b/package.json
@@ -19,4 +19,5 @@
     "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"npx cypress open\"",
     "pretest:e2e:run": "pnpm run build",
     "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
-    "
+    "typecheck": "tsc && tsc -p cypress",
+    "validate": "run-
