--- a/package.json
+++ b/package.json
@@ -20,4 +20,7 @@
     "pretest:e2e:run": "pnpm run build",
     "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
     "typecheck": "tsc && tsc -p cypress",
-    "validate": "run-
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+  },
+  "prettier": {},
+  "esl
