workqueue: remove the empty check in too_many_workers()

--- a/package.json
+++ b/package.json
@@ -30,4 +30,6 @@
   ],
   "dependencies": {
     "@prisma/client": "^4.11.0",
-    "@remix-run/n
+    "@remix-run/node": "^1.14.3",
+    "@remix-run/react": "^1.14.3",
+    "@remix-run/serve
