--- a/package.json
+++ b/package.json
@@ -34,4 +34,7 @@
     "@remix-run/react": "^1.14.3",
     "@remix-run/serve": "^1.14.3",
     "@remix-run/server-runtime": "^1.14.3",
-    "@types/cookie": 
+    "@types/cookie": "^0.5.1",
+    "bcryptjs": "^2.4.3",
+    "isbot": "^3.6.7",
+    "pr
