--- a/package.json
+++ b/package.json
@@ -39,4 +39,8 @@
     "isbot": "^3.6.7",
     "prisma": "^4.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tiny-invariant": "^1.3.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker
