--- a/package.json
+++ b/package.json
@@ -43,4 +43,6 @@
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
-    "@faker-js/faker
+    "@faker-js/faker": "^7.6.0",
+    "@remix-run/dev": "^1.14.3",
+    "@remix-run
