--- a/package.json
+++ b/package.json
@@ -47,4 +47,5 @@
     "@remix-run/dev": "^1.14.3",
     "@remix-run/eslint-config": "^1.14.3",
     "@testing-library/cypress": "^8.0.7",
- 
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom":
