--- a/package.json
+++ b/package.json
@@ -48,4 +48,6 @@
     "@remix-run/eslint-config": "^1.14.3",
     "@testing-library/cypress": "^8.0.7",
     "@testing-library/dom": "^8.20.0",
-    "@testing-library/jest-dom":
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-librar
