--- a/package.json
+++ b/package.json
@@ -50,4 +50,6 @@
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-librar
+    "@testing-library/user-event": "^14.4.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@t
