--- a/package.json
+++ b/package.json
@@ -52,4 +52,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/bcryptjs": "^2.4.2",
-    "@t
+    "@types/eslint": "^8.21.2",
+    "@types/node": "^18.15.3",
+    "@types/react": "
