--- a/package.json
+++ b/package.json
@@ -54,4 +54,6 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.21.2",
     "@types/node": "^18.15.3",
-    "@types/react": "
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vite
