--- a/package.json
+++ b/package.json
@@ -58,4 +58,6 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.3",
-    "au
+    "autoprefixer": "^10.4.14",
+    "binode": "^1.0.5",
+    "c8": "^7.13.0
