--- a/package.json
+++ b/package.json
@@ -63,4 +63,6 @@
     "c8": "^7.13.0",
     "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
-    "cy
+    "cypress": "^10.11.0",
+    "eslint": "^8.36.0",
+    "eslint-c
