--- a/package.json
+++ b/package.json
@@ -66,4 +66,7 @@
     "cypress": "^10.11.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-cypress": "^2.12
+    "eslint-plugin-cypress": "^2.12.1",
+    "happy-dom": "^8.9.0",
+    "msw": "^0.49.3",
+    "np
