--- a/package.json
+++ b/package.json
@@ -69,4 +69,6 @@
     "eslint-plugin-cypress": "^2.12.1",
     "happy-dom": "^8.9.0",
     "msw": "^0.49.3",
-    "np
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "prett
