--- a/package.json
+++ b/package.json
@@ -71,4 +71,5 @@
     "msw": "^0.49.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "prett
+    "prettier": "2.8.4",
+    "prettier-plugin-tailw
