mm: thp: fix pmd_present for split_huge_page and PROT_NONE with THP

--- a/package.json
+++ b/package.json
@@ -74,4 +74,6 @@
     "prettier": "2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
     "start-server-and-test": "^1.15.4",
-    "tail
+    "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths
