--- a/package.json
+++ b/package.json
@@ -76,4 +76,7 @@
     "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
-    "tsconfig-paths
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
+    "vit
