--- a/package.json
+++ b/package.json
@@ -79,4 +79,7 @@
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
-    "vit
+    "vite-tsconfig-paths": "^3.6.0",
+    "vitest": "^0.29.3"
+  },
+  "e
