--- a/package.json
+++ b/package.json
@@ -86,4 +86,6 @@
     "node": ">=14"
   },
   "prisma": {
-    "seed": "ts-node --require ts
+    "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
+  }
+}
